@@ -14,3 +14,5 @@ tree.splitpane.vert.loc=40
 
 # a percentage of the horizontal size of the parent container
 tree.splitpane.horiz.loc=40
+
+tree.show.attributes=ID only
